--- a/content/index.html
+++ b/content/index.html
@@ -139,7 +139,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <br /><h1>About</h1>
-<p>cmsimde_site</p><br /> </div>
+<p>cmsimde_site</p>
+<p>cmsimde_site</p>
+<p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
+<p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
