--- a/content/index.html
+++ b/content/index.html
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -138,11 +138,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p>cmsimde_site</p>
+    <div id="tipue_search_content"> <a href='W2.html'>Next</a> >> W2<br /><h1>About</h1>
 <p>cmsimde_site</p>
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
-<p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p><br /> </div>
+<p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
+<p></p>
+<br /> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
