--- a/content/W2.html
+++ b/content/W2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>W2</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>W2</h1>
 <p><span style="background-color: #ccffcc;">第一組</span></p>
 <p>倉儲:<a href="https://github.com/40923205/cd2022bg1">cd2022bg1</a></p>
 <p>網頁:<a href="https://40923205.github.io/cd2022bg1/content/index.html">cd2022bg1</a></p>
@@ -432,7 +432,8 @@ img.add_border {
 <td style="width: 65.1px;"><a href="https://40923248.github.io/cd2022/content/index.html">40923248</a></td>
 </tr>
 </tbody>
-</table><br />About << <a href='About.html'>Previous</a> </div>
+</table>
+<br />About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
