--- a/content/index.html
+++ b/content/index.html
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a></li>
                       </ul>
                 </nav>
               </div>
