--- a/content/w3.html
+++ b/content/w3.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <br /><h1>w3</h1>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w3</h1>
 <p>video1</p>
 <p></p>
 <script>
@@ -258,10 +258,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><br />W2 << <a href='W2.html'>Previous</a> </div>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
