change w8 drawing absolute site

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -418,6 +418,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
+<p>繪製零件檔</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
