--- a/config/content.htm
+++ b/config/content.htm
@@ -439,5 +439,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div></div></div>
+<h1>w10</h1>
+<h2>w10_block_ui</h2>
+<h2>w10_nx_integ</h2>
+<h2>w10_ssh</h2></div></div></div>
