--- a/content/w8.html
+++ b/content/w8.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <br /><h1>w8</h1>
+    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>繪製零件檔</p>
 <script>
@@ -162,8 +162,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div></div></div><br />w3 << <a href='w3.html'>Previous</a> </div>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
