--- a/config/content.htm
+++ b/config/content.htm
@@ -440,6 +440,35 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <h1>w10</h1>
-<h2>w10_block_ui</h2>
-<h2>w10_nx_integ</h2>
+<p>w10-1 任務執行步驟:</p>
+<ol>
+<li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
+<li>利用 Wink 開啟專案</li>
+<li>在各頁面加入說明標註</li>
+<li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
+<li>完成後轉出對應的 mp4 放入頁面與網誌</li>
+</ol><h2>w10_block_ui</h2>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="/downloads/w10_block_ui.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><h2>w10_nx_integ</h2>
 <h2>w10_ssh</h2></div></div></div>
