--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -440,7 +440,14 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <h1>w10</h1>
-<h2>w10_block_ui</h2>
+<p>w10-1 任務執行步驟:</p>
+<ol>
+<li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
+<li>利用 Wink 開啟專案</li>
+<li>在各頁面加入說明標註</li>
+<li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
+<li>完成後轉出對應的 mp4 放入頁面與網誌</li>
+</ol><h2>w10_block_ui</h2>
 <script>
 var winkVideoData = {
   dataVersion: 1,
