--- a/content/w10.html
+++ b/content/w10.html
@@ -147,7 +147,8 @@ img.add_border {
 <li>在各頁面加入說明標註</li>
 <li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
 <li>完成後轉出對應的 mp4 放入頁面與網誌</li>
-</ol><br />w8 << <a href='w8.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
+</ol>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
         
     <!-- footer -->
       <div class="container">
