--- a/content/w10_ssh.html
+++ b/content/w10_ssh.html
@@ -162,7 +162,10 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div><br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> </div>
+</div>
+</div>
+</div>
+<br />w10_nx_integ << <a href='w10_nx_integ.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
