--- a/config/content.htm
+++ b/config/content.htm
@@ -3,7 +3,7 @@
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
 <p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
 <p></p>
-<h1>W2</h1>
+<h1>w2</h1>
 <p><span style="background-color: #ccffcc;">第一組</span></p>
 <p>倉儲:<a href="https://github.com/40923205/cd2022bg1">cd2022bg1</a></p>
 <p>網頁:<a href="https://40923205.github.io/cd2022bg1/content/index.html">cd2022bg1</a></p>
@@ -598,4 +598,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div></div>
+</div>
+</div>
+</div>
+</div>
+</div>
