--- a/content/W2.html
+++ b/content/W2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w8.html'>w8</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='w10_nx_integ.html'>w10_nx_integ</a><li><a href='w10_ssh.html'>w10_ssh</a></li></ul><li><a href='w12.html'>w12</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>W2</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
 <p><span style="background-color: #ccffcc;">第一組</span></p>
 <p>倉儲:<a href="https://github.com/40923205/cd2022bg1">cd2022bg1</a></p>
 <p>網頁:<a href="https://40923205.github.io/cd2022bg1/content/index.html">cd2022bg1</a></p>
