--- a/config/content.htm
+++ b/config/content.htm
@@ -594,11 +594,6 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <h1>online</h1>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass">NX和CoppeliaSim整合</div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass">以NX繪製MTB機械手臂組立件</div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-<div class="winkVideoPlayOverlayClass">
-</div></div></div></div></div></div></div>
+<div class="winkVideoPlayOverlayClass"></div>
+<p>NX及CoppeliaSim整合</p></div></div></div></div></div></div>
