--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -593,14 +593,6 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<h1 class="winkVideoControlBarProgressEmptyMiddleClass">online</h1>
-<div class="winkVideoControlBarProgressRightClass"></div>
+<h1>online</h1>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<div class="winkVideoPlayOverlayClass"></div></div></div></div></div></div></div>
