--- a/content/online.html
+++ b/content/online.html
@@ -140,14 +140,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>online</h1>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass">NX和CoppeliaSim整合</div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass">以NX繪製MTB機械手臂組立件</div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-<div class="winkVideoPlayOverlayClass">
-</div></div></div></div></div></div></div><br />w12 << <a href='w12.html'>Previous</a> </div>
+<div class="winkVideoPlayOverlayClass"></div>
+<p>NX及CoppeliaSim整合</p></div></div></div></div></div></div><br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
