--- a/content/online.html
+++ b/content/online.html
@@ -142,7 +142,12 @@ img.add_border {
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>online</h1>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
-<p>NX及CoppeliaSim整合</p></div></div></div></div></div></div><br />w12 << <a href='w12.html'>Previous</a> </div>
+<p>NX及CoppeliaSim整合</p>
+</div>
+</div>
+</div>
+</div>
+<br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
