--- a/content/w3.html
+++ b/content/w3.html
@@ -258,7 +258,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+</div>
+</div><br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
