--- a/content/online.html
+++ b/content/online.html
@@ -146,8 +146,7 @@ img.add_border {
 </div>
 </div>
 </div>
-</div>
-<br />w12 << <a href='w12.html'>Previous</a> </div>
+</div><br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
