--- a/content/w3.html
+++ b/content/w3.html
@@ -141,7 +141,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w3</h1>
 <p>video1</p>
-<p></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -152,6 +152,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
 <source src="https://40923210.github.io/cd2022/downloads/video1.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -167,6 +168,7 @@ var winkVideoData = {
 <p>------------------------------------------------------------</p>
 <p>video2</p>
 <p></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -177,6 +179,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/video2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -191,6 +194,7 @@ var winkVideoData = {
 </div>
 <p>------------------------------------------------------------</p>
 <p>video3</p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -201,6 +205,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/video3.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -216,6 +221,7 @@ var winkVideoData = {
 <p>------------------------------------------------------------</p>
 <p>video4</p>
 <p></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -226,6 +232,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/video4.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -240,6 +247,7 @@ var winkVideoData = {
 </div>
 <p>------------------------------------------------------------</p>
 <p>video5</p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -250,6 +258,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/video5.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -259,7 +268,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div><br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+</div>
+<br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
