--- a/content/w8.html
+++ b/content/w8.html
@@ -142,6 +142,7 @@ img.add_border {
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>繪製零件檔</p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -152,6 +153,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/drawing.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -165,6 +167,7 @@ var winkVideoData = {
 </div>
 <p>--------------------------------------</p>
 <p>組合</p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -175,6 +178,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/%E7%B5%84%E5%90%88.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -190,6 +194,7 @@ var winkVideoData = {
 <p>--------------------------------------</p>
 <p>CoppeliaSim</p>
 <p></p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -200,6 +205,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/0512coppeliasim.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
@@ -211,7 +217,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />w3 << <a href='w3.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+</div>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
