--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
 <p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
 <p><span style="background-color: #ccffcc;"> </span></p>
-<p><span style="background-color: #ccffcc;"></span></p><br /> <a href='w2.html'>Next</a> >> w2</div>
+<br /> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
