--- a/content/w3.html
+++ b/content/w3.html
@@ -141,6 +141,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w3</h1>
 <p>video1</p>
+<p></p>
 <p>
 <script>
 var winkVideoData = {
@@ -268,8 +269,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div>
-<br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+</div><br />w2 << <a href='w2.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
