--- a/config/content.htm
+++ b/config/content.htm
@@ -2,7 +2,7 @@
 <p>cmsimde_site</p>
 <p>個人倉儲:<a href="https://github.com/40923210/cd2022">https://github.com/40923210/cd2022</a></p>
 <p>個人網頁:<a href="https://40923210.github.io/cd2022/content/index.html">https://40923210.github.io/cd2022/content/index.html</a></p>
-<p><span style="background-color: #ccffcc;"> </span></p>
+<p></p>
 <h1>w2</h1>
 <p><span style="background-color: #ccffcc;">第一組</span></p>
 <p>倉儲:<a href="https://github.com/40923205/cd2022bg1">cd2022bg1</a></p>
@@ -296,7 +296,8 @@
 <td style="width: 65.1px;"><a href="https://40923248.github.io/cd2022/content/index.html">40923248</a></td>
 </tr>
 </tbody>
-</table><h1>w3</h1>
+</table>
+<h1>w3</h1>
 <p>video1</p>
 <p></p>
 <p>
@@ -426,7 +427,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 </div>
-</div><h1>w8</h1>
+</div>
+<h1>w8</h1>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>繪製零件檔</p>
 <p>
@@ -538,8 +540,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h2>w10_nx_integ</h2>
+</div><h2>w10_nx_integ</h2>
 <p>
 <script>
 var winkVideoData = {
@@ -563,8 +564,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div>
-<h2>w10_ssh</h2>
+</div><h2>w10_ssh</h2>
 <p></p>
 <p>
 <script>
@@ -586,7 +586,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<h1>w12</h1>
+</div>
+</div><h1>w12</h1>
 <p></p>
 <p>各分組在執行<span> </span><a href="https://mde.tw/cd2022_guide/content/w8%20%E4%BB%BB%E5%8B%99.html">w8 任務</a>之後, 請回答下列問題:</p>
 <ol>
@@ -619,7 +620,5 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoPlayOverlayClass"></div>
 <p>NX及CoppeliaSim整合</p>
-</div>
-</div>
 </div>
 </div>
